Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-linode
spec:
  tls:
  - hosts:
    - app1.merikech.com
    - app2.merikech.com
    secretName: kubernetes-tls
  ingressClassName: nginx
  rules:
  - host: "app1.merikech.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80
  - host: "app2.merikech.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
